k8s-simple-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-simple-nginx
spec:
  selector:
    matchLabels:
      app: k8s-simple-nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: k8s-simple-nginx
        env: development
    spec:
      containers:
        - name: k8s-simple-nginx
          image: cloudmahesh.azurecr.io/simple-nginx:v1 ## its from azure container registry
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-simple-nginx-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: k8s-simple-nginx
