ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: k8s-simple-nginx-service
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  backend:
    serviceName: k8s-simple-nginx-service
    servicePort: 80
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: k8s-simple-nginx-service
              servicePort: 80
